[BUG] Fix top alignement on the right column - alignement fixed

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3495,8 +3495,8 @@ a.editable {
           }
 
           #container article .right .content ul.sharing {
-            margin: 0 0 28px 0;
-            padding: 0 0 20px 0;
+            margin: 3px 0 0 0;
+            padding: 0 0 25px 0;
 
             li { @include inline-block; background:none; padding:0; }
           } // ul.sharing
